# PDFHelper_v2

./: .gitignore  LICENSE.md  README.md
backend/: .gitignore  main.py  pyproject.toml
backend/api/: deps.py  http.py  parse.py  query.py  ws.py
backend/core/: config.py  paths.py  prewarm.py  watcher.py
backend/models/: request.py  response.py
backend/schemas/: config.py  request.py  response.py
backend/services/: error_utils.py  mineru.py  orchestrator.py
backend/services/indexer/: chroma_service.py  chunker.py  embedder.py  indexer_config.py
backend/services/llm/: base.py  llama_factory.py  openai_compat_factory.py
backend/services/parser/: content_merger.py  mineru.py
backend/services/reconstructor/: __init__.py  md_reconstructor.py
backend/services/translator/: model_translator.py  translator_config.py  translator_prompts.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  app.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src/components/: AppNav.tsx  ConfirmDialog.tsx  DualMarkdownPane.tsx  FileInfoPanel.tsx  FileListPanel.tsx  FileManager.tsx  IndexCheckBar.tsx  IndexStatus.tsx  MarkdownViewer.tsx  OverwriteConfirmDialog.tsx  ParseStatus.tsx  ProgressBar.tsx  QueryPanel.tsx  Toast.tsx  TranslateStatus.tsx  UploadDropZone.tsx
frontend/src/pages/: FilesPage.tsx  HomePage.tsx  QueryPage.tsx  SettingsPage.tsx
frontend/src/services/: fileService.ts  settingsService.ts  wsManager.ts
frontend/src/stores/: useIndexStore.ts  useParseStore.ts  useQueryStore.ts  useSettingsStore.ts  useToastStore.ts  useTranslateStore.ts
frontend/src/types/: settings.ts  ws.ts
