[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.0",
    "fastapi>=0.120.0",
    "huggingface-hub>=0.34.0",
    "llama-cpp-python==0.3.4",
    "mineru[core]>=3.0.8",
    "pydantic>=2.12.5",
    "sentence-transformers>=3.0.0",
    "tiktoken>=0.7.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "uvicorn>=0.38.0",
    "websockets>=16.0",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "llama-cpp-cu121"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu121"
explicit = true

[tool.uv.sources]
llama-cpp-python = { index = "llama-cpp-cu121" }
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]
